--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 
-        <title>KimKwangIl Portfolio</title>
+        <title>First Portfolio Bootstrap 5 Theme</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,7 +48,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">PANGIL</a>
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">First</a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
@@ -102,11 +102,11 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
                                     <img src="images/happy-bearded-young-man.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
 
-                                    <h1 class="hero-title ms-3 mb-0">안녕하세요, 환영합니다!</h1>
+                                    <h1 class="hero-title ms-3 mb-0">안녕하세요 김광일입니다!</h1>
                                 </div>
 
-                                <h2 class="mb-4">사이트의 주인공 김광일입니다!</h2>
-                                <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_2">알아가기</a></p>
+                                <h2 class="mb-4">I’m available for freelance work.</h2>
+                                <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_2">Let's begin</a></p>
                             </div>
                         </div>
 
