--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">Services</a>
+                            <a class="nav-link click-scroll" href="#section_3">Bible serves</a>
                         </li>
 
                         <li class="nav-item">
@@ -81,7 +81,6 @@ https://templatemo.com/tm-578-first-portfolio
                     </ul>
 
                     <div class="d-lg-flex align-items-center d-none ms-auto">
-                        <i class="navbar-icon bi-telephone-plus me-3"></i>
                         <a class="custom-btn btn" href="#section_5">
                             Simply Introduce
                         </a>
@@ -266,29 +265,29 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-10 col-12 mx-auto">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
-                                <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg" class="avatar-image img-fluid" alt="">
+                                <img src="images/bible.jpeg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Services</h2>
+                                <h2 class="text-white ms-4 mb-0">Bible serves</h2>
                             </div>
 
                             <div class="row pt-lg-5">
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">Websites</h3>
+                                            <h3 class="mb-0">Philippians</h3>
 
                                             <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0">$2,400</p>
+                                                <p class="services-price-text mb-0">4:13</p>
                                                 <div class="services-price-overlay"></div>
                                             </div>
                                         </div>
 
-                                        <p>You may want to explore Too CSS for great collection of free HTML CSS templates.</p>
+                                        <p>I can do everything through him who gives me strength.</p>
 
                                         <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-globe"></i>
+                                            <i class="services-icon bi-heart"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -296,62 +295,20 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb services-thumb-up">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">Branding</h3>
+                                            <h3 class="mb-0">Psalams</h3>
 
                                             <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0">$1,200</p>
+                                                <p class="services-price-text mb-0">23:1</p>
                                                 <div class="services-price-overlay"></div>
                                             </div>
                                         </div>
 
-                                        <p>You can explore more CSS templates on TemplateMo website by browsing through different tags.</p>
+                                        <p>The LORD is my shepherd, I shall not be in want.</p>
 
                                         <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-lightbulb"></i>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6 col-12">
-                                    <div class="services-thumb">
-                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">Ecommerce</h3>
-
-                                            <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0">$3,600</p>
-                                                <div class="services-price-overlay"></div>
-                                            </div>
-                                        </div>
-
-                                        <p>If you need a customized ecommerce website for your business, feel free to discuss with me.</p>
-
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
-
-                                        <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-phone"></i>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6 col-12">
-                                    <div class="services-thumb services-thumb-up">
-                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">SEO</h3>
-
-                                            <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0">$1,450</p>
-                                                <div class="services-price-overlay"></div>
-                                            </div>
-                                        </div>
-
-                                        <p>To list your website first on any search engine, we will work together. First Portfolio is one-page CSS Template for free download.</p>
-
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
-
-                                        <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-google"></i>
+                                            <i class="services-icon bi-heart"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -438,49 +395,50 @@ https://templatemo.com/tm-578-first-portfolio
 
                             <div class="col-lg-3 col-md-6 col-12 pe-lg-0">
                                 <div class="contact-info contact-info-border-start d-flex flex-column">
-                                    <strong class="site-footer-title d-block mb-3">Services</strong>
+                                    <strong class="site-footer-title d-block mb-3">Useful Website</strong>
 
                                     <ul class="footer-menu">
-                                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Websites</a></li>
+                                        <li class="footer-menu-item"><a href="https://hisnet.handong.edu" class="footer-menu-link">Hisnet</a></li>
 
-                                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Branding</a></li>
+                                        <li class="footer-menu-item"><a href="https://sports.news.naver.com/index" class="footer-menu-link">Naver Sports</a></li>
 
-                                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Ecommerce</a></li>
-
-                                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">SEO</a></li>
+                                        <li class="footer-menu-item"><a href="https://www.premierleague.com" class="footer-menu-link">EPL</a></li>
                                     </ul>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
 
                                     <ul class="social-icon">
-                                        <li class="social-icon-item"><a href="https://twitter.com/minthu" class="social-icon-link bi-twitter"></a></li>
 
-                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.instagram.com/pang._.il/" class="social-icon-link bi-instagram"></a></li>
 
-                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-pinterest"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.notion.so/pangil/5b60c20eb6d44c6faf97f6265a07e7c4?pvs=4" class="social-icon-link bi-people"></a></li>
 
-                                        <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.youtube.com/@user-vv2bk6hw1r" class="social-icon-link bi-youtube"></a></li>
                                     </ul>
 
-                                    <strong class="site-footer-title d-block mt-4 mb-3">Start a project</strong>
+                                    <strong class="site-footer-title d-block mt-4 mb-3">My Bible verses</strong>
+                                    
 
-                                    <p class="mb-0">I’m available for freelance projects</p>
+                                    <p class="mb-0"><b>Job 1:21</b><br>The LORD gave and the LORD has taken away; may the name of the LORD be praised</p>
                                 </div>
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-12 ps-lg-0">
                                 <div class="contact-info d-flex flex-column">
-                                    <strong class="site-footer-title d-block mb-3">About</strong>
+                                    <strong class="site-footer-title d-block mb-3">Favaorite Song</strong>
 
                                     <p class="mb-2">
-                                        Joshua is a professional web developer. Feel free to get in touch with me.
-                              </p>
+                                        Lord, I lift Your name on high
+                                        Lord, I love to sing Your praises
+                                        I'm so glad You're in my life
+                                        I'm so glad You came to save us
+                                        </p>  
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
 
                                     <p>
                                         <a href="mailto:hello@josh.design">
-                                            hello@josh.design
+                                            22000051@handong.ac.XX
                                         </a>
                                     </p>
 
@@ -488,7 +446,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                     <p class="mb-0">
                                         <a href="tel: 120-240-9600">
-                                            120-240-9600
+                                            010-XXXX-XXXX
                                         </a>
                                     </p>
                                 </div>
