Fix image extension typo

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@ https://templatemo.com/tm-578-first-portfolio
                 <a href="index.html" class="navbar-brand mx-auto mx-lg-0">PANGIL</a>
 
                 <div class="d-flex align-items-center d-lg-none">
-                    <i class="navbar-icon bi-telephone-plus me-3"></i>
                     <a class="custom-btn btn" href="#section_5">
-                        120-240-9600
+                        Simply Introduce
                     </a>
                 </div>
 
@@ -86,7 +85,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </a>
                     </div>
                 </div>
-
+gi
             </div>
         </nav>
 
@@ -356,7 +355,7 @@ https://templatemo.com/tm-578-first-portfolio
                                 </div>
 
                                 <a href="images/projects/love2.JPG" class="popup-image">
-                                    <img src="images/projects/love2.JPG" class="projects-image img-fluid" alt="">
+                                    <img src="images/projects/love2.jpg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -370,7 +369,7 @@ https://templatemo.com/tm-578-first-portfolio
                                 </div>
 
                                 <a href="images/projects/love3.JPG" class="popup-image">
-                                    <img src="images/projects/love3.JPG" class="projects-image img-fluid" alt="">
+                                    <img src="images/projects/love3.jpg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -452,7 +451,7 @@ https://templatemo.com/tm-578-first-portfolio
                                 </div>
                             </div>
                             <div class="col-lg-6 col-12">
-                                <img src="images/pangil5.JPG" class="about-image img-fluid" alt="">
+                                <img src="images/pangil5.jpg" class="about-image img-fluid" alt="">
                             </div>
 
                         
