Fix tage typo, error typo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_5">EndContent</a>
+                            <a class="nav-link click-scroll" href="#section_5">End Content</a>
                         </li>
                     </ul>
 
@@ -85,7 +85,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </a>
                     </div>
                 </div>
-gi
+
             </div>
         </nav>
 
@@ -283,7 +283,7 @@ gi
 
                                         <p>I can do everything through him who gives me strength.</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="http://www.holybible.or.kr/B_GAE/cgi/biblesrch.php?VR=GAE&QR=%BA%F4%B8%B3%BA%B8%BC%AD+4%3A13&OD=" class="custom-btn custom-border-btn btn mt-3">More Bibles</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-heart"></i>
@@ -294,7 +294,7 @@ gi
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb services-thumb-up">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">Psalams</h3>
+                                            <h3 class="mb-0">Psalms</h3>
 
                                             <div class="services-price-wrap ms-auto">
                                                 <p class="services-price-text mb-0">23:1</p>
@@ -304,7 +304,7 @@ gi
 
                                         <p>The LORD is my shepherd, I shall not be in want.</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="http://www.holybible.or.kr/B_GAE/cgi/biblesrch.php?VR=GAE&QR=%BD%C3%C6%ED+23%C6%ED+1%C0%FD&OD=" class="custom-btn custom-border-btn btn mt-3">More Bibles</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-heart"></i>
