--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <h3 class="projects-title">WELOVE songs</h3>
                                 </div>
 
-                                <a href="images/projects/love2.JPG" class="popup-image">
+                                <a href="images/projects/love2.jpg" class="popup-image">
                                     <img src="images/projects/love2.jpg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
@@ -368,7 +368,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <h3 class="projects-title">Apple</h3>
                                 </div>
 
-                                <a href="images/projects/love3.JPG" class="popup-image">
+                                <a href="images/projects/love3.jpg" class="popup-image">
                                     <img src="images/projects/love3.jpg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
